update build.sh, add gh link

--- a/Litepeek/Layout/MainLayout.razor
+++ b/Litepeek/Layout/MainLayout.razor
@@ -1,11 +1,13 @@
 ﻿@inherits LayoutComponentBase
 
 <div style="padding: 7px">
-@Body
+    @Body
+    
+    <FluentNavLink Style="padding: 7px;" Href="https://github.com/codymullins/litepeek" Target="_blank">View on GitHub</FluentNavLink>
 </div>
 
-<FluentToastProvider />
-<FluentDialogProvider />
-<FluentTooltipProvider />
-<FluentMessageBarProvider />
-<FluentMenuProvider />
+<FluentToastProvider/>
+<FluentDialogProvider/>
+<FluentTooltipProvider/>
+<FluentMessageBarProvider/>
+<FluentMenuProvider/>
